--- a/package.json
+++ b/package.json
@@ -6,28 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && aws s3 sync .next/static s3://startup-academy-app-2024/_next/static/ && aws s3 sync out/ s3://startup-academy-app-2024"
   },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next-auth": "^4.24.5",
-    "prisma": "^5.9.1",
-    "@prisma/client": "^5.9.1",
-    "stripe": "^14.17.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.11.16",
+    "@auth/prisma-adapter": "^2.8.0",
+    "@heroicons/react": "^2.0.18",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.22.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "bcryptjs": "^2.4.3",
+    "clsx": "^2.0.0",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
+    "prisma": "^5.22.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "stripe": "^14.12.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "^20.17.30",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
